# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  GameOfLife.sln  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  README.md  board.txt  main.cpp
include/: GameOfLife.h
src/: GameOfLife.cpp  main.cpp
